--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,13 +4,13 @@ env:
   JAVA_OPTS: "-Xms512m -Xmx6048m -Xss128m -XX:ReservedCodeCacheSize=512m -server -XX:+UseG1GC"
   GRADLE_OPTS: "-Xms512m -Xmx6048m -Xss128m -XX:ReservedCodeCacheSize=512m -server -XX:+UseG1GC"
   TERM: xterm-256color
-  JDK_CURRENT: 17
+  JDK_CURRENT: 11
 
 on:
   push:
-    branches: [ master ]
+    branches: [ 6.6 ]
   pull_request:
-    branches: [ master ]
+    branches: [ 6.6 ]
 
 jobs:
   cancel-previous-runs:
