--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 
-version=7.0.0-RC7
+version=6.6.12
 # CAS server version
-cas.version=7.0.0-RC7
+cas.version=6.6.12
 
-springBootVersion=3.1.2
+springBootVersion=2.7.3
 
 # The version of this overlay project
 group=org.apereo.cas
 artifactId=cas-overlay
-sourceCompatibility=17
-targetCompatibility=17
+sourceCompatibility=11
+targetCompatibility=11
 
 gradleFreeFairPluginVersion=8.3
 gradleDependencyManagementPluginVersion=1.1.3
@@ -22,7 +22,7 @@ gradleDockerPluginVersion=9.3.1
 containerImageOrg=apereo
 containerImageName=cas
 
-baseDockerImage=eclipse-temurin:17-jdk
+baseDockerImage=eclipse-temurin:11-jdk
 allowInsecureRegistries=false
 dockerImagePlatform=amd64:linux
 
@@ -52,7 +52,7 @@ shellDir=build/libs
 ivyVersion=2.5.0
 gradleDownloadTaskVersion=4.1.1
 
-tomcatVersion=10.1.13
+tomcatVersion=9.0.80
 
 # Include private repository
 # override these in user properties or pass in values from env on command line
