--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   cas:
-    build: .
+    image: aleixmt/echempad-cas:latest
+    restart: unless-stopped
     ports:
      - "8443:8443"
      - "8080:8080"
