--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,23 +37,19 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/echempad-cas:latest
 
-  jobs:
-    build:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v3
-        - name: Login to Docker Hub
-          uses: docker/login-action@v2
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v2
-        - name: Build and push
-          uses: docker/build-push-action@v4
-          with:
-            context: .
-            file: ./Dockerfile
-            push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/echempad-cas:latest
+  deploy:
+    needs: build
+    runs-on: [ self-hosted ]
+
+    steps:
+      - name: Download docker-compose.yml
+        run: wget https://raw.githubusercontent.com/AleixMT/eChempad/master/docker-compose.ci.yaml -O docker-compose.yaml
+
+      - name: Stop eChempad cas container
+        run: docker-compose down
+
+      - name: Force pulling of the images or they would not be updated
+        run: docker-compose pull
+
+      - name: restart eChempad cas container with new image
+        run: docker-compose up -d
