--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,8 +71,11 @@ jobs:
     runs-on: [ self-hosted ]
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Download docker-compose.yml
-        run: wget https://raw.githubusercontent.com/ICIQ-DMP/eChempad-CAS-public-mirror/master/docker-compose.ci.yaml -O docker-compose.yaml
+        run: mv docker-compose.ci.yaml docker-compose.yaml
 
       - name: Stop eChempad cas container
         run: docker-compose down
