--- a/gradle/tasks.gradle
+++ b/gradle/tasks.gradle
@@ -369,7 +369,7 @@ if (!skipValidation) {
         if (file.exists()) {
             throw new GradleException("This overlay project is overriding a CAS-supplied configuration file at ${file.path}. "
                 + "Overriding this file will disable all default CAS settings that are provided to the overlay, and "
-                + "generally has unintended side-effects. It's best to move your configuration inside an application.yml "
+                + "generally has unintended side-effects. It's best to move your configuration inside an application.properties "
                 + "file, if you intend to keep the configuration bundled with the CAS web application. \n\nTo disable this "
                 + "validation step, run the build with -Pvalidate=false.");
         }
