--- a/etc/cas/config/application.properties
+++ b/etc/cas/config/application.properties
@@ -1,8 +1,5 @@
-spring.profiles.include=prod,dev
-#spring.profiles.active=dev
-
-cas.server.name=https://cas.example.org:8443
-cas.server.prefix=https://cas.example.org:8443/cas
+# This property can be prod or dev, depending on the config that we want to use for deployment
+spring.profiles.include=prod
 
 logging.config=file:/etc/cas/config/log4j2.xml
 
