--- a/etc/cas/config/application.properties
+++ b/etc/cas/config/application.properties
@@ -3,3 +3,13 @@ spring.profiles.include=prod
 
 logging.config=file:/etc/cas/config/log4j2.xml
 
+# DB config
+cas.authn.jdbc.bind[0].driver-class=org.hsqldb.jdbcDriver
+cas.serviceRegistry.jpa.user=eChempad
+cas.serviceRegistry.jpa.password=chemistry
+cas.serviceRegistry.jpa.ddlAuto=none
+cas.serviceRegistry.jpa.driverClass=org.postgresql.Driver
+cas.serviceRegistry.jpa.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+
+
+
