UPDATED: refactored script for kiilling by port, added kill process by port run configuration, added properties for jdbc auth

--- a/etc/cas/config/application.properties
+++ b/etc/cas/config/application.properties
@@ -1,15 +1,30 @@
 # This property can be prod or dev, depending on the config that we want to use for deployment
-spring.profiles.include=prod
+spring.profiles.include=dev
 
 logging.config=file:/etc/cas/config/log4j2.xml
 
-# DB config
-cas.authn.jdbc.bind[0].driver-class=org.hsqldb.jdbcDriver
-cas.serviceRegistry.jpa.user=eChempad
-cas.serviceRegistry.jpa.password=chemistry
-cas.serviceRegistry.jpa.ddlAuto=none
-cas.serviceRegistry.jpa.driverClass=org.postgresql.Driver
-cas.serviceRegistry.jpa.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+
+# We set the cas.authn.accept.users to blank. This will deactivate the use of static user repositories by the CAS server.
+cas.authn.accept.users=
+# Query to retrieve users
+cas.authn.jdbc.query[0].sql=SELECT * FROM researcher WHERE username = ?
+cas.authn.jdbc.query[0].url=jdbc:postgresql://postgres_db:5432/eChempad
+cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.PostgreSQLDialect
+# The database connection user.
+cas.authn.jdbc.query[0].user=eChempad
+# The database connection password.
+cas.authn.jdbc.query[0].password=chemistry
+cas.authn.jdbc.query[0].ddlAuto=none
+cas.authn.jdbc.query[0].driverClass=org.hsqldb.jdbcDriver=org.postgresql.Driver
+cas.authn.jdbc.query[0].driver-class=org.hsqldb.jdbcDriver=org.postgresql.Driver
+cas.authn.jdbc.query[0].fieldPassword=password
+cas.authn.jdbc.query[0].passwordEncoder.type=NONE
+# Password field/column name to retrieve.
+cas.authn.jdbc.query[0].field-password=password
+# Define the password encoder type to use. Type may be specified as blank or NONE to disable password encoding
+cas.authn.jdbc.query[0].password-encoder.type=NONE
+# The encoding algorithm to use such as MD5. Relevant when the type used is DEFAULT or GLIBC_CRYPT.
+#cas.authn.jdbc.query[0].password-encoder.encoding-algorithm=NONE
 
 
 
