UPDATED: application properties configured for db connection

--- a/etc/cas/config/application.properties
+++ b/etc/cas/config/application.properties
@@ -15,8 +15,8 @@ cas.authn.jdbc.query[0].user=eChempad
 # The database connection password.
 cas.authn.jdbc.query[0].password=chemistry
 cas.authn.jdbc.query[0].ddlAuto=none
-cas.authn.jdbc.query[0].driverClass=org.hsqldb.jdbcDriver=org.postgresql.Driver
-cas.authn.jdbc.query[0].driver-class=org.hsqldb.jdbcDriver=org.postgresql.Driver
+# default org.hsqldb.jdbcDriver=
+cas.authn.jdbc.query[0].driverClass=org.postgresql.Driver
 cas.authn.jdbc.query[0].fieldPassword=password
 cas.authn.jdbc.query[0].passwordEncoder.type=NONE
 # Password field/column name to retrieve.
