--- a/etc/cas/config/dev.properties
+++ b/etc/cas/config/dev.properties
@@ -2,4 +2,9 @@
 cas.server.name=https://localhost:8443
 cas.server.prefix=https://localhost:8443/cas
 
-# DB config
+# Logging
+logging.level.org.apereo=DEBUG
+
+# Database
+cas.authn.jdbc.query[0].url=jdbc:postgresql://localhost:5432/eChempad
+
