UPDATED: application properties files to activate profile

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -1,7 +1,13 @@
+## General config
+# This property can be prod or dev, depending on the config that we want to use for deployment
+#spring.profiles.include=dev,prod
+
+logging.config=file:/etc/cas/config/log4j2.xml
 
 # We set the cas.authn.accept.users to blank. This will deactivate the use of static user repositories by the CAS server.
 cas.authn.accept.users=
 
+## DB query
 # Query to retrieve users
 cas.authn.jdbc.query[0].sql=SELECT * FROM researcher WHERE username = ?
 
