--- a/etc/cas/config/dev.properties
+++ b/etc/cas/config/dev.properties
@@ -3,7 +3,7 @@ cas.server.name=https://localhost:8443
 cas.server.prefix=https://localhost:8443/cas
 
 # Logging
-logging.level.org.apereo=DEBUG
+cas.log.level=DEBUG
 
 # Database
 cas.authn.jdbc.query[0].url=jdbc:postgresql://localhost:5432/eChempad
