--- a/etc/cas/config/prod.properties
+++ b/etc/cas/config/prod.properties
@@ -2,5 +2,8 @@
 cas.server.name=https://echempad-cas.iciq.es:8443
 cas.server.prefix=https://echempad-cas.iciq.es:8443/cas
 
+# Logging
+cas.log.level=INFO
+
 # DB config
 cas.serviceRegistry.jpa.url=jdbc:postgresql://postgres_db:5432/eChempad
