ADDED: log4j config for dev mode

--- a/etc/cas/config/dev.properties
+++ b/etc/cas/config/dev.properties
@@ -8,3 +8,4 @@ cas.log.level=DEBUG
 # Database
 cas.authn.jdbc.query[0].url=jdbc:postgresql://localhost:5432/eChempad
 
+logging.config=file:/etc/cas/config/log4j2-dev.xml
