--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -2,6 +2,7 @@
 # This property can be prod or dev, depending on the config that we want to use for deployment
 #spring.profiles.include=dev,prod
 
+# prod logger is the default logger
 logging.config=file:/etc/cas/config/log4j2.xml
 
 # We set the cas.authn.accept.users to blank. This will deactivate the use of static user repositories by the CAS server.
