ADDED: db authentication using jdbc, sorted properties and described order, added run configuration for composite script

--- a/build.gradle
+++ b/build.gradle
@@ -274,6 +274,10 @@ dependencies {
     implementation "org.apereo.cas:cas-server-support-pm-webflow:${project.'cas.version'}"
     // DB authentication support
     implementation "org.apereo.cas:cas-server-support-pm-jdbc:${project.'cas.version'}"
+    // JDBC support
+    implementation "org.apereo.cas:cas-server-support-jdbc:${project.'cas.version'}"
+    // JDBC drivers
+    implementation "org.apereo.cas:cas-server-support-jdbc-drivers:${project.'cas.version'}"
 
     if (project.hasProperty("casModules")) {
         def dependencies = project.getProperty("casModules").split(",")
