--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -1,14 +1,9 @@
-## General config
-# This property can be prod or dev, depending on the config that we want to use for deployment
-#spring.profiles.include=dev,prod
-
-# prod logger is the default logger
-logging.config=file:/etc/cas/config/log4j2.xml
-
+## Login and users
 # We set the cas.authn.accept.users to blank. This will deactivate the use of static user repositories by the CAS server.
 cas.authn.accept.users=
 
-## DB query
+
+## DB config
 # Query to retrieve users
 cas.authn.jdbc.query[0].sql=SELECT * FROM researcher WHERE username = ?
 
@@ -19,7 +14,7 @@ cas.authn.jdbc.query[0].url=jdbc:postgresql://postgres_db:5432/eChempad
 cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # The database connection user.
-cas.authn.jdbc.query[0].user=eChempad
+cas.authn.jdbc.query[0].user=amarine
 
 # The database connection password.
 cas.authn.jdbc.query[0].password=chemistry
@@ -45,3 +40,6 @@ cas.authn.jdbc.query[0].field-password=password
 # The encoding algorithm to use such as MD5. Relevant when the type used is DEFAULT or GLIBC_CRYPT.
 cas.authn.jdbc.query[0].passwordEncoder.type=NONE
 cas.authn.jdbc.query[0].password-encoder.type=NONE
+
+
+
