--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -42,4 +42,5 @@ cas.authn.jdbc.query[0].passwordEncoder.type=NONE
 cas.authn.jdbc.query[0].password-encoder.type=NONE
 
 
-
+## Services
+cas.service-registry.json.location=file:/etc/cas/services
