--- a/etc/cas/config/dev.properties
+++ b/etc/cas/config/dev.properties
@@ -31,7 +31,7 @@ cas.webflow.crypto.encryption.key=72EBixy4wLsBocfLIr6gbw
 ## Logging
 # prod logger is the default logger
 logging.config=file:/etc/cas/config/log4j2-dev.xml
-logging.level==DEBUG
+logging.level.org.springframework=DEBUG
 
 
 
