--- a/etc/cas/config/prod.properties
+++ b/etc/cas/config/prod.properties
@@ -32,7 +32,7 @@ cas.webflow.crypto.encryption.key=72EBixy4wLsBocfLIr6gbw
 ## Logging
 # prod logger is the default logger
 logging.config=file:/etc/cas/config/log4j2.xml
-cas.log.level=INFO
+logging.level.org.springframework=INFO
 
 
 
