CHANGED: services parameters for integration. currently we have endless loop

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -43,4 +43,5 @@ cas.authn.jdbc.query[0].password-encoder.type=NONE
 
 
 ## Services
+cas.service-Registry.core.init-from-json=true
 cas.service-registry.json.location=file:/etc/cas/services
