UPDATED: ORCID authentication. Authentication suceeds but cas is not retrieving user info because I need to configure profile url with a path parameter

--- a/build.gradle
+++ b/build.gradle
@@ -280,7 +280,8 @@ dependencies {
     implementation "org.apereo.cas:cas-server-support-jdbc-drivers:${project.'cas.version'}"
     // JSON service registry
     implementation "org.apereo.cas:cas-server-support-json-service-registry:${project.'cas.version'}"
-
+    // Delegated authentication for ORCID OAUTH
+    implementation "org.apereo.cas:cas-server-support-pac4j-webflow:${project.'cas.version'}"
 
     if (project.hasProperty("casModules")) {
         def dependencies = project.getProperty("casModules").split(",")
