--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -46,3 +46,25 @@ cas.authn.jdbc.query[0].password-encoder.type=NONE
 cas.service-Registry.core.init-from-json=true
 cas.service-registry.json.location=file:/etc/cas/services
 
+## ORCID
+
+cas.authn.pac4j.oauth2[0].clientName=ORCID
+cas.authn.pac4j.oauth2[0].profileVerb=GET
+
+# TODO: secret in prod
+cas.authn.pac4j.oauth2[0].secret=187854af-f113-43da-8de5-eeed661aacce
+cas.authn.pac4j.oauth2[0].id=APP-UL39T4BGTQ3TNB4L
+
+cas.authn.pac4j.oauth2[0].auth-url=https://sandbox.orcid.org/oauth/authorize
+cas.authn.pac4j.oauth2[0].scope=/authenticate
+cas.authn.pac4j.oauth2[0].token-url=https://sandbox.orcid.org/oauth/token
+cas.authn.pac4j.oauth2[0].profile-url=https://sandbox.orcid.org/oauth/profile
+#https://api.sandbox.orcid.org/v3.0/[ORCID iD]/record
+
+cas.authn.pac4j.oauth2[0].customParams.response_type=code
+cas.authn.pac4j.oauth2[0].customParams.client_id=code
+
+cas.authn.pac4j.oauth2[0].profileAttrs.phone=phone
+cas.authn.pac4j.oauth2[0].profileAttrs.id=APP-UL39T4BGTQ3TNB4L
+cas.authn.pac4j.oauth2[0].profileAttrs.homeAddress=address
+
