ADDED: views from iochem bd, functional but there are some templating issues

--- a/build.gradle
+++ b/build.gradle
@@ -282,6 +282,8 @@ dependencies {
     implementation "org.apereo.cas:cas-server-support-json-service-registry:${project.'cas.version'}"
     // Delegated authentication for ORCID OAUTH
     implementation "org.apereo.cas:cas-server-support-pac4j-webflow:${project.'cas.version'}"
+    // LDAP
+    implementation "org.apereo.cas:cas-server-support-ldap:${project.'cas.version'}"
 
     if (project.hasProperty("casModules")) {
         def dependencies = project.getProperty("casModules").split(",")
