--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -58,8 +58,8 @@ cas.authn.pac4j.oauth2[0].id=APP-UL39T4BGTQ3TNB4L
 cas.authn.pac4j.oauth2[0].auth-url=https://sandbox.orcid.org/oauth/authorize
 cas.authn.pac4j.oauth2[0].scope=/authenticate
 cas.authn.pac4j.oauth2[0].token-url=https://sandbox.orcid.org/oauth/token
-cas.authn.pac4j.oauth2[0].profile-url=https://sandbox.orcid.org/oauth/profile
-#https://api.sandbox.orcid.org/v3.0/[ORCID iD]/record
+cas.authn.pac4j.oauth2[0].profile-url=https://api.sandbox.orcid.org/v3.0/{user}/record
+
 
 cas.authn.pac4j.oauth2[0].customParams.response_type=code
 cas.authn.pac4j.oauth2[0].customParams.client_id=code
@@ -68,3 +68,26 @@ cas.authn.pac4j.oauth2[0].profileAttrs.phone=phone
 cas.authn.pac4j.oauth2[0].profileAttrs.id=APP-UL39T4BGTQ3TNB4L
 cas.authn.pac4j.oauth2[0].profileAttrs.homeAddress=address
 
+
+# Views
+cas.theme.default-theme-name=iochembd
+
+
+# LDAP
+#cas.authn.ldap[0].type=AUTHENTICATED
+#cas.authn.ldap[0].ldap-url=ldaps://ldap.iciq.es:389/
+#cas.authn.ldap[0].name=Custom LDAP setup
+#cas.authn.ldap[0].use-ssl=true
+#cas.authn.ldap[0].search-filter=(mail={user})
+#cas.authn.ldap[0].base-dn=ou=users
+#cas.authn.ldap[0].bind-dn=cn=admin
+#cas.authn.ldap[0].bind-credential=password
+
+#cas.authn.ldap[0].order=0
+#cas.authn.ldap[0].useStartTls=false
+#cas.authn.ldap[0].minPoolSize=3
+#cas.authn.ldap[0].subtreeSearch=true
+#cas.authn.ldap[0].maxPoolSize=20
+#cas.authn.ldap[0].principalAttributeId=mail
+#cas.authn.ldap[0].enhanceWithEntryResolver=true
+#cas.authn.ldap[0].principalAttributeList=mail,cn,givenName,sn
