UPDATED: structure for theme and templates

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -70,7 +70,7 @@ cas.authn.pac4j.oauth2[0].profileAttrs.homeAddress=address
 
 
 # Views
-cas.theme.default-theme-name=iochembd
+#cas.theme.default-theme-name=iochembd
 
 
 # LDAP
