--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -3,6 +3,15 @@
 cas.authn.accept.users=
 
 
+## Services
+cas.service-Registry.core.init-from-json=true
+cas.service-registry.json.location=file:/etc/cas/services
+
+
+# Views
+#cas.theme.default-theme-name=iochembd
+
+
 ## DB config
 # Query to retrieve users
 cas.authn.jdbc.query[0].sql=SELECT * FROM researcher WHERE username = ?
@@ -42,10 +51,6 @@ cas.authn.jdbc.query[0].passwordEncoder.type=NONE
 cas.authn.jdbc.query[0].password-encoder.type=NONE
 
 
-## Services
-cas.service-Registry.core.init-from-json=true
-cas.service-registry.json.location=file:/etc/cas/services
-
 ## ORCID
 
 cas.authn.pac4j.oauth2[0].clientName=ORCID
@@ -69,25 +74,30 @@ cas.authn.pac4j.oauth2[0].profileAttrs.id=APP-UL39T4BGTQ3TNB4L
 cas.authn.pac4j.oauth2[0].profileAttrs.homeAddress=address
 
 
-# Views
-#cas.theme.default-theme-name=iochembd
+
 
 
 # LDAP
-#cas.authn.ldap[0].type=AUTHENTICATED
-#cas.authn.ldap[0].ldap-url=ldaps://ldap.iciq.es:389/
-#cas.authn.ldap[0].name=Custom LDAP setup
-#cas.authn.ldap[0].use-ssl=true
-#cas.authn.ldap[0].search-filter=(mail={user})
-#cas.authn.ldap[0].base-dn=ou=users
-#cas.authn.ldap[0].bind-dn=cn=admin
-#cas.authn.ldap[0].bind-credential=password
+cas.authn.ldap[0].name=ICIQ LDAP
 
-#cas.authn.ldap[0].order=0
-#cas.authn.ldap[0].useStartTls=false
-#cas.authn.ldap[0].minPoolSize=3
-#cas.authn.ldap[0].subtreeSearch=true
-#cas.authn.ldap[0].maxPoolSize=20
-#cas.authn.ldap[0].principalAttributeId=mail
-#cas.authn.ldap[0].enhanceWithEntryResolver=true
-#cas.authn.ldap[0].principalAttributeList=mail,cn,givenName,sn
+cas.authn.ldap[0].type=AUTHENTICATED
+# iciqdc02.iciq.es
+cas.authn.ldap[0].ldap-url=ldaps://iciqdc01.iciq.es:389/
+cas.authn.ldap[0].base-dn=ou=users
+cas.authn.ldap[0].bind-dn=cn=admin
+cas.authn.ldap[0].search-filter=(mail={user})
+
+# TODO: password is Secret
+cas.authn.ldap[0].bind-credential=password
+#cas.authn.ldap[0].password-encoder.encoding-algorithm=
+#cas.authn.ldap[0].password-encoder.type=NONE
+
+cas.authn.ldap[0].order=0
+cas.authn.ldap[0].use-ssl=true
+cas.authn.ldap[0].useStartTls=false
+cas.authn.ldap[0].minPoolSize=3
+cas.authn.ldap[0].subtreeSearch=true
+cas.authn.ldap[0].maxPoolSize=20
+cas.authn.ldap[0].principalAttributeId=mail
+cas.authn.ldap[0].enhanceWithEntryResolver=true
+cas.authn.ldap[0].principalAttributeList=mail,cn,givenName,sn
