CHANGED: secure channel of ldap server

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -79,10 +79,10 @@ cas.authn.pac4j.oauth2[0].profileAttrs.homeAddress=address
 
 # LDAP
 cas.authn.ldap[0].name=ICIQ LDAP
-
 cas.authn.ldap[0].type=AUTHENTICATED
+
 # iciqdc02.iciq.es
-cas.authn.ldap[0].ldap-url=ldaps://iciqdc01.iciq.es:389/
+cas.authn.ldap[0].ldap-url=ldap://iciqdc01.iciq.es:389/
 cas.authn.ldap[0].base-dn=ou=users
 cas.authn.ldap[0].bind-dn=cn=admin
 cas.authn.ldap[0].search-filter=(mail={user})
