CHANGED: LDAP properties

--- a/etc/cas/config/ldap.properties
+++ b/etc/cas/config/ldap.properties
@@ -1,25 +1,15 @@
 ## LDAP
 cas.authn.ldap[0].name=ICIQ LDAP
 cas.authn.ldap[0].ldap-url=ldap://iciqdc01.iciq.es:389/
-cas.authn.ldap[0].base-dn=dc=example,dc=com
-cas.authn.ldap[0].bind-dn=cn=ldapechempad,ou=users,dc=example,dc=com
+cas.authn.ldap[0].base-dn=CN=users,dc=ICIQ,dc=ES
+cas.authn.ldap[0].bind-dn=CN=ldapechempad,CN=users,dc=ICIQ,dc=ES
 
 # Search criteria
-cas.authn.ldap[0].search-filter=(mail={user})
-cas.authn.ldap[0].allowMultipleResults=false
+cas.authn.ldap[0].search-filter=(userPrincipalName={user})
 
 # Connection
 cas.authn.ldap[0].minPoolSize=3
 cas.authn.ldap[0].maxPoolSize=10
 
 # Auth type
-cas.authn.ldap[0].type=DIRECT
-
-#cas.authn.ldap[0].password-encoder.encoding-algorithm=
-#cas.authn.ldap[0].password-encoder.type=NONE
-#cas.authn.ldap[0].order=0
-#cas.authn.ldap[0].useStartTls=false
-#cas.authn.ldap[0].subtreeSearch=true
-#cas.authn.ldap[0].principalAttributeId=mail
-#cas.authn.ldap[0].enhanceWithEntryResolver=true
-#cas.authn.ldap[0].principalAttributeList=mail,cn,givenName,sn
+cas.authn.ldap[0].type=AUTHENTICATED
