CHANGED: secrets added to secret file

--- a/etc/cas/config/dev.properties
+++ b/etc/cas/config/dev.properties
@@ -10,7 +10,7 @@ spring.security.user.name=casuser
 spring.security.user.password=secret
 
 
-## DB config
+## DB config, in dev mode is usually in the same machine
 cas.authn.jdbc.query[0].url=jdbc:postgresql://localhost:5432/eChempad
 
 
