--- a/etc/cas/config/ldap.properties
+++ b/etc/cas/config/ldap.properties
@@ -13,3 +13,5 @@ cas.authn.ldap[0].maxPoolSize=10
 
 # Auth type
 cas.authn.ldap[0].type=AUTHENTICATED
+
+# Secret for authentication against ICIQ LDAP is in secret files
