CHANGED: moved properties to orcid file, added debug properties, changed some config for db

--- a/etc/cas/config/dev.properties
+++ b/etc/cas/config/dev.properties
@@ -1,7 +1,7 @@
 ## Logging
 # prod logger is the default logger
 logging.config=file:/etc/cas/config/log4j2-dev.xml
-logging.level.org.springframework=ERROR
+logging.level.org.springframework=debug
 
 
 ## Login and users
@@ -14,6 +14,10 @@ spring.security.user.password=secret
 cas.authn.jdbc.query[0].url=jdbc:postgresql://localhost:5432/eChempad
 
 
+# Disables pooling, so we do not fail at start if the DNS of the ICIQ LDAP server is not resolvable
+cas.authn.ldap[0].disable-pooling=true
 
-
-
+# Debug for ldap authentication, to know what classes are doing
+pac4j.log.level=warn
+org.apereo.cas.oidc="warn"
+org.apereo.cas.oidc.web.flow="warn"
