--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -27,7 +27,7 @@ cas.authn.jdbc.query[0].url=jdbc:postgresql://postgres_db:5432/eChempad
 cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # The database connection user.
-cas.authn.jdbc.query[0].user=amarine
+cas.authn.jdbc.query[0].user=aleixmt
 
 # The database connection password.
 cas.authn.jdbc.query[0].password=chemistry
@@ -54,22 +54,3 @@ cas.authn.jdbc.query[0].field-password=password
 cas.authn.jdbc.query[0].passwordEncoder.type=NONE
 cas.authn.jdbc.query[0].password-encoder.type=NONE
 
-
-## ORCID
-
-cas.authn.pac4j.oauth2[0].clientName=ORCID
-cas.authn.pac4j.oauth2[0].profileVerb=GET
-
-cas.authn.pac4j.oauth2[0].id=APP-UL39T4BGTQ3TNB4L
-
-cas.authn.pac4j.oauth2[0].auth-url=https://sandbox.orcid.org/oauth/authorize
-cas.authn.pac4j.oauth2[0].scope=/authenticate
-cas.authn.pac4j.oauth2[0].token-url=https://sandbox.orcid.org/oauth/token
-cas.authn.pac4j.oauth2[0].profile-url=https://api.sandbox.orcid.org/v3.0/{user}/record
-
-cas.authn.pac4j.oauth2[0].customParams.response_type=code
-cas.authn.pac4j.oauth2[0].customParams.client_id=code
-
-cas.authn.pac4j.oauth2[0].profileAttrs.phone=phone
-cas.authn.pac4j.oauth2[0].profileAttrs.id=APP-UL39T4BGTQ3TNB4L
-cas.authn.pac4j.oauth2[0].profileAttrs.homeAddress=address
