--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,5 @@ services:
     ports:
      - "8443:8443"
      - "8080:8080"
+    volumes:  # Mount secrets configuration file
+      - ./etc/cas/config/secrets.properties:/etc/cas/config/secrets.properties
