FIXED: typo in secrets config, added port in pre run composite

--- a/etc/cas/config/ldap.properties
+++ b/etc/cas/config/ldap.properties
@@ -15,3 +15,4 @@ cas.authn.ldap[0].maxPoolSize=10
 cas.authn.ldap[0].type=AUTHENTICATED
 
 # Secret for authentication against ICIQ LDAP is in secret files
+#cas.authn.ldap[0].bind-credential=
