--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -4,5 +4,7 @@ services:
     image: aleixmt/echempad-cas:latest
     restart: unless-stopped
     ports:
-      - "9443:8443"
-      - "9080:8080"
+      - "8443:8443"
+      - "8080:8080"
+    volumes:  # Mount secrets configuration file
+      - ./etc/cas/config/secrets.properties:/etc/cas/config/secrets.properties
