--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -73,3 +73,15 @@ cas.authn.pac4j.oauth2[0].customParams.client_id=code
 cas.authn.pac4j.oauth2[0].profileAttrs.phone=phone
 cas.authn.pac4j.oauth2[0].profileAttrs.id=APP-UL39T4BGTQ3TNB4L
 cas.authn.pac4j.oauth2[0].profileAttrs.homeAddress=address
+
+# Secret for authenticate as eChempad is in secret file or alternatively can be revoked / renewed from the orcid sandbox
+#cas.authn.pac4j.oauth2[0].secret
+
+
+server.ssl.enabled=true
+server.ssl.key-store=file:/etc/cas/thekeystore
+server.ssl.key-store-password=changeit
+server.ssl.trust-store=file:/etc/cas/jssecacerts
+server.ssl.trust-store-password=changeit
+
+
