FIXED: db authentication but still entering in redirect loop

--- a/etc/cas/config/dev.properties
+++ b/etc/cas/config/dev.properties
@@ -13,6 +13,8 @@ spring.security.user.password=secret
 ## DB config, in dev mode is usually in the same machine
 cas.authn.jdbc.query[0].url=jdbc:postgresql://localhost:5432/eChempad
 
+# The database connection user.
+cas.authn.jdbc.query[0].user=amarine
 
 # Disables pooling, so we do not fail at start if the DNS of the ICIQ LDAP server is not resolvable
 cas.authn.ldap[0].disable-pooling=true
