ADDED: compatibility with the script for the certifiate handling

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -19,9 +19,8 @@ cas.server.prefix=https://echempad-cas.iciq.es:8443/cas
 # Secret for authenticate as eChempad is in secret file or alternatively can be revoked / renewed from the orcid sandbox
 #cas.authn.pac4j.oauth2[0].secret
 server.ssl.enabled=true
-server.ssl.key-store=file:/etc/cas/thekeystore
-server.ssl.key-store-password=changeit
-server.ssl.trust-store=file:/etc/cas/jssecacerts
-server.ssl.trust-store-password=changeit
-
-
+server.ssl.keyStore=file:/etc/cas/keystore
+server.ssl.keyStorePassword=changeit
+server.ssl.trustStore=file:/etc/cas/truststore
+server.ssl.trustStorePassword=changeit
+server.ssl.keyAlias=eChempad-CAS
