CHANGED: keystore name to its former one, name of orcid service, updated certificates

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -19,7 +19,7 @@ cas.server.prefix=https://echempad-cas.iciq.es:8443/cas
 # Secret for authenticate as eChempad is in secret file or alternatively can be revoked / renewed from the orcid sandbox
 #cas.authn.pac4j.oauth2[0].secret
 server.ssl.enabled=true
-server.ssl.keyStore=file:/etc/cas/keystore
+server.ssl.keyStore=file:/etc/cas/thekeystore
 server.ssl.keyStorePassword=changeit
 server.ssl.trustStore=file:/etc/cas/truststore
 server.ssl.trustStorePassword=changeit
