--- a/etc/cas/config/orcid.properties
+++ b/etc/cas/config/orcid.properties
@@ -1,5 +1,6 @@
 
 ## ORCID
+cas.authn.pac4j.oauth2[0].name=ORCID_dev
 
 cas.authn.pac4j.oauth2[0].clientName=ORCID
 cas.authn.pac4j.oauth2[0].profileVerb=GET
