UPDATED: properties for ssl

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -24,3 +24,9 @@ server.ssl.keyStorePassword=changeit
 server.ssl.trustStore=file:/etc/cas/truststore
 server.ssl.trustStorePassword=changeit
 server.ssl.keyAlias=eChempad-CAS
+javax.net.ssl.keyStore=file:/etc/cas/thekeystore
+javax.net.ssl.keyStorePassword=changeit
+javax.net.ssl.trustStore=file:/etc/cas/truststore
+javax.net.ssl.trustStorePassword=changeit
+javax.net.ssl.keyAlias=eChempad-CAS
+javax.net.ssl.keyPassword=changeit
