--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -18,15 +18,10 @@ cas.server.prefix=https://echempad-cas.iciq.es:8443/cas
 
 # Secret for authenticate as eChempad is in secret file or alternatively can be revoked / renewed from the orcid sandbox
 #cas.authn.pac4j.oauth2[0].secret
-server.ssl.enabled=true
-server.ssl.keyStore=file:/etc/cas/thekeystore
-server.ssl.keyStorePassword=changeit
-server.ssl.trustStore=file:/etc/cas/truststore
-server.ssl.trustStorePassword=changeit
-server.ssl.keyAlias=eChempad-CAS
-javax.net.ssl.keyStore=file:/etc/cas/thekeystore
-javax.net.ssl.keyStorePassword=changeit
-javax.net.ssl.trustStore=file:/etc/cas/truststore
-javax.net.ssl.trustStorePassword=changeit
-javax.net.ssl.keyAlias=eChempad-CAS
-javax.net.ssl.keyPassword=changeit
+server.servlet.ssl.enabled=true
+server.servlet.ssl.keyStore=file:/etc/cas/thekeystore
+server.servlet.ssl.keyStorePassword=changeit
+server.servlet.ssl.trustStore=file:/etc/cas/truststore
+server.servlet.ssl.trustStorePassword=changeit
+server.servlet.ssl.keyAlias=eChempad-CAS
+server.servlet.ssl.keyPassword=changeit
