--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -4,7 +4,8 @@ cas.authn.accept.users=
 
 
 ## Services
-cas.service-Registry.core.init-from-json=true
+cas.service-registry.core.init-from-json=true
+# TODO Put the config into the classpath classpath:/etc/cas/services
 cas.service-registry.json.location=file:/etc/cas/services
 
 ## Server
