--- a/etc/cas/config/orcid.properties
+++ b/etc/cas/config/orcid.properties
@@ -10,6 +10,7 @@ cas.authn.pac4j.oauth2[0].id=APP-UL39T4BGTQ3TNB4L
 cas.authn.pac4j.oauth2[0].auth-url=https://sandbox.orcid.org/oauth/authorize
 cas.authn.pac4j.oauth2[0].scope=/authenticate
 cas.authn.pac4j.oauth2[0].token-url=https://sandbox.orcid.org/oauth/token
+# TODO substitute {user} by dynamic user when rewriting internal method
 cas.authn.pac4j.oauth2[0].profile-url=https://api.sandbox.orcid.org/v3.0/{user}/record
 
 cas.authn.pac4j.oauth2[0].customParams.response_type=code
