--- a/etc/cas/config/prod.properties
+++ b/etc/cas/config/prod.properties
@@ -3,16 +3,9 @@
 logging.config=file:/etc/cas/config/log4j2.xml
 logging.level.org.springframework=INFO
 
-
 ## Login and users
-# Deactivate static login
-spring.security.user.name=
-spring.security.user.password=
+# We set the cas.authn.accept.users to blank. This will deactivate the use of static user repositories by the CAS server.
+cas.authn.accept.users=
 
-
-## DB config
-cas.authn.jdbc.query[0].url=jdbc:postgresql://postgres_db:5432/eChempad
-
-
-
-
+# The database connection user.
+cas.authn.jdbc.query[0].user=amarine
