ADDED: certificates from eChempad and changes some configs from profile asnd dockerfile

--- a/etc/cas/config/orcid.properties
+++ b/etc/cas/config/orcid.properties
@@ -1,17 +1,19 @@
 
 ## ORCID
-cas.authn.pac4j.oauth2[0].name=ORCID_dev
-
-cas.authn.pac4j.oauth2[0].clientName=ORCID
-cas.authn.pac4j.oauth2[0].profileVerb=GET
+cas.authn.pac4j.oauth2[0].clientName=ORCID_DEV
 
 cas.authn.pac4j.oauth2[0].id=APP-UL39T4BGTQ3TNB4L
-
+# Secret is in secret profile
+#cas.authn.pac4j.oauth2[0].secret=
 cas.authn.pac4j.oauth2[0].auth-url=https://sandbox.orcid.org/oauth/authorize
-cas.authn.pac4j.oauth2[0].scope=/authenticate
 cas.authn.pac4j.oauth2[0].token-url=https://sandbox.orcid.org/oauth/token
 # TODO substitute {user} by dynamic user when rewriting internal method
 cas.authn.pac4j.oauth2[0].profile-url=https://api.sandbox.orcid.org/v3.0/{user}/record
+cas.authn.pac4j.oauth2[0].profileVerb=GET
+#cas.authn.pac4j.oauth2[0].profilePath=/users/self
+
+
+cas.authn.pac4j.oauth2[0].scope=/authenticate
 
 cas.authn.pac4j.oauth2[0].customParams.response_type=code
 cas.authn.pac4j.oauth2[0].customParams.client_id=code
