--- a/etc/cas/config/container.properties
+++ b/etc/cas/config/container.properties
@@ -1,2 +1,5 @@
 ## DB config
 cas.authn.jdbc.query[0].url=jdbc:postgresql://postgres_db:5432/eChempad
+
+# The database connection user.
+cas.authn.jdbc.query[0].user=eChempad
