UPDATED: secrets management

--- a/etc/cas/config/db.properties
+++ b/etc/cas/config/db.properties
@@ -3,7 +3,7 @@
 cas.authn.jdbc.query[0].sql=SELECT * FROM researcher WHERE username = ?
 
 # URL to DB
-cas.authn.jdbc.query[0].url=jdbc:postgresql://localhost:5432/eChempad
+cas.authn.jdbc.query[0].url=jdbc:postgresql://postgres_db:5432/eChempad
 
 # DB dialect
 cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.PostgreSQLDialect
