--- a/etc/cas/config/prod.properties
+++ b/etc/cas/config/prod.properties
@@ -8,4 +8,4 @@ logging.level.org.springframework=INFO
 cas.authn.accept.users=
 
 # The database connection user.
-cas.authn.jdbc.query[0].user=amarine
+cas.authn.jdbc.query[0].user=eChempad
