--- a/etc/cas/config/container.properties
+++ b/etc/cas/config/container.properties
@@ -2,4 +2,14 @@
 cas.authn.jdbc.query[0].url=jdbc:postgresql://postgres_db:5432/eChempad
 
 # The database connection user.
-cas.authn.jdbc.query[0].user=eChempad
+cas.authn.jdbc.query[0].user=eChempadfff
+
+# Debug in container mode
+## Logging
+# prod logger is the default logger
+logging.config=file:/etc/cas/config/log4j2-dev.xml
+logging.level.org.springframework=debug
+# Debug for ldap authentication, to know what classes are doing
+pac4j.log.level=warn
+org.apereo.cas.oidc="warn"
+org.apereo.cas.oidc.web.flow="warn"
