ADDED: debug instructions for db auth since it is failing

--- a/etc/cas/config/container.properties
+++ b/etc/cas/config/container.properties
@@ -2,7 +2,7 @@
 cas.authn.jdbc.query[0].url=jdbc:postgresql://postgres_db:5432/eChempad
 
 # The database connection user.
-cas.authn.jdbc.query[0].user=eChempadfff
+cas.authn.jdbc.query[0].user=eChempad
 
 # Debug in container mode
 ## Logging
@@ -13,3 +13,5 @@ logging.level.org.springframework=debug
 pac4j.log.level=warn
 org.apereo.cas.oidc="warn"
 org.apereo.cas.oidc.web.flow="warn"
+
+cas.jdbc.show-sql=true
