ADDED: certificate and secrets

--- a/etc/cas/config/container.properties
+++ b/etc/cas/config/container.properties
@@ -15,3 +15,5 @@ org.apereo.cas.oidc="warn"
 org.apereo.cas.oidc.web.flow="warn"
 
 cas.jdbc.show-sql=true
+
+server.ssl.key-store=file:/run/secrets/CAS_KEYSTORE
