--- a/gradle.properties
+++ b/gradle.properties
@@ -43,7 +43,7 @@ appServer=-tomcat
 # used by the build to assist with creating
 # self-signed certificates for https endpoints
 certDir=/etc/cas
-serverKeystore=thekeystore
+serverKeystore=CAS_keystore.p12
 exportedServerCert=cas.crt
 storeType=PKCS12
 
