ADDED: config for cert, changed username in prod

--- a/gradle.properties
+++ b/gradle.properties
@@ -44,7 +44,7 @@ appServer=-tomcat
 # self-signed certificates for https endpoints
 certDir=/etc/cas
 serverKeystore=CAS_keystore.p12
-exportedServerCert=cas.crt
+exportedServerCert=CAS.crt
 storeType=PKCS12
 
 # Location of the downloaded CAS Shell JAR
