ADDED: keystore management for docker deployment

--- a/etc/cas/config/container.properties
+++ b/etc/cas/config/container.properties
@@ -4,16 +4,15 @@ cas.authn.jdbc.query[0].url=jdbc:postgresql://postgres_db:5432/eChempad
 # The database connection user.
 cas.authn.jdbc.query[0].user=eChempad
 
+server.ssl.key-store=file:/run/secrets/CAS_KEYSTORE
+
 # Debug in container mode
 ## Logging
 # prod logger is the default logger
-logging.config=file:/etc/cas/config/log4j2-dev.xml
-logging.level.org.springframework=debug
+#logging.config=file:/etc/cas/config/log4j2-dev.xml
+#logging.level.org.springframework=debug
 # Debug for ldap authentication, to know what classes are doing
-pac4j.log.level=warn
-org.apereo.cas.oidc="warn"
-org.apereo.cas.oidc.web.flow="warn"
-
-cas.jdbc.show-sql=true
-
-server.ssl.key-store=file:/run/secrets/CAS_KEYSTORE
+#pac4j.log.level=warn
+#org.apereo.cas.oidc="warn"
+#org.apereo.cas.oidc.web.flow="warn"
+#cas.jdbc.show-sql=true
