--- a/etc/cas/config/dev.properties
+++ b/etc/cas/config/dev.properties
@@ -13,7 +13,7 @@ spring.security.user.name=casuser
 spring.security.user.password=secret
 
 # The database connection user.
-cas.authn.jdbc.query[0].user=aleixmt
+cas.authn.jdbc.query[0].user=eChempad
 
 # Disables pooling, so we do not fail at start if the DNS of the ICIQ LDAP server is not resolvable
 cas.authn.ldap[0].disable-pooling=true
