ADDED: class for injecting secrets into Java runtime env, minor changes

--- a/etc/cas/config/db.properties
+++ b/etc/cas/config/db.properties
@@ -1,6 +1,6 @@
 ## DB config
 # Query to retrieve users
-cas.authn.jdbc.query[0].sql=SELECT * FROM researcher WHERE username = ?
+cas.authn.jdbc.query[0].sql="SELECT * FROM researcher WHERE username = ?"
 
 # URL to DB
 cas.authn.jdbc.query[0].url=jdbc:postgresql://127.0.0.1:5432/eChempad
