--- a/etc/cas/config/dev.properties
+++ b/etc/cas/config/dev.properties
@@ -3,17 +3,15 @@
 logging.config=file:/etc/cas/config/log4j2-dev.xml
 logging.level.org.springframework=debug
 # Debug for ldap authentication, to know what classes are doing
-pac4j.log.level=warn
-org.apereo.cas.oidc="warn"
-org.apereo.cas.oidc.web.flow="warn"
-
-## Login and users
-# Static login
-spring.security.user.name=casuser
-spring.security.user.password=secret
-
-# The database connection user.
-cas.authn.jdbc.query[0].user=eChempad
+pac4j.log.level=debug
+org.apereo.cas.oidc="debug"
+org.apereo.cas.oidc.web.flow="debug"
 
 # Disables pooling, so we do not fail at start if the DNS of the ICIQ LDAP server is not resolvable
 cas.authn.ldap[0].disable-pooling=true
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+hibernate.show_sql=true
