--- a/etc/cas/config/prod.properties
+++ b/etc/cas/config/prod.properties
@@ -5,7 +5,4 @@ logging.level.org.springframework=INFO
 
 ## Login and users
 # We set the cas.authn.accept.users to blank. This will deactivate the use of static user repositories by the CAS server.
-#cas.authn.accept.users=
-
-# The database connection user.
-cas.authn.jdbc.query[0].user=eChempad
+cas.authn.accept.enabled=false
