--- a/etc/cas/config/db.properties
+++ b/etc/cas/config/db.properties
@@ -9,10 +9,10 @@ cas.authn.jdbc.query[0].url=jdbc:postgresql://127.0.0.1:5432/eChempad
 cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # The database connection user.
-cas.authn.jdbc.query[0].user=aleixmt
+cas.authn.jdbc.query[0].user=eChempad
 
 # The database connection password.
-cas.authn.jdbc.query[0].password=chemistry
+# password is a secret
 
 # Initialize tables in startup
 cas.authn.jdbc.query[0].ddlAuto=none
