--- a/etc/cas/config/ldap.properties
+++ b/etc/cas/config/ldap.properties
@@ -1,11 +1,11 @@
 ## LDAP
 cas.authn.ldap[0].name=ICIQ LDAP
-cas.authn.ldap[0].ldap-url=ldap://iciqdc01.iciq.es:389/
-cas.authn.ldap[0].base-dn=CN=users,dc=ICIQ,dc=ES
-cas.authn.ldap[0].bind-dn=CN=ldapechempad,CN=users,dc=ICIQ,dc=ES
+cas.authn.ldap[0].ldapUrl=ldap://iciqdc01.iciq.es:389/
+cas.authn.ldap[0].baseDn=CN=users,dc=ICIQ,dc=ES
+cas.authn.ldap[0].bindDn=CN=ldapechempad,CN=users,dc=ICIQ,dc=ES
 
 # Search criteria
-cas.authn.ldap[0].search-filter=(userPrincipalName={user})
+cas.authn.ldap[0].searchFilter=(userPrincipalName={user})
 
 # Connection
 cas.authn.ldap[0].minPoolSize=3
