--- a/etc/cas/config/container.properties
+++ b/etc/cas/config/container.properties
@@ -1,8 +1,10 @@
 ## DB config
 cas.authn.jdbc.query[0].url=jdbc:postgresql://postgres_db:5432/eChempad
 
+logging.level.org.springframework=warn
+
+
 # The database connection user.
-cas.authn.jdbc.query[0].user=eChempad
 
 server.ssl.key-store=file:/run/secrets/CAS_KEYSTORE
 
