--- a/etc/cas/config/dev.properties
+++ b/etc/cas/config/dev.properties
@@ -1,7 +1,7 @@
 ## Logging
 # prod logger is the default logger
 logging.config=file:/etc/cas/config/log4j2-dev.xml
-logging.level.org.springframework=debug
+logging.level.org.springframework=warn
 # Debug for ldap authentication, to know what classes are doing
 pac4j.log.level=debug
 org.apereo.cas.oidc="debug"
@@ -15,3 +15,4 @@ spring.jpa.properties.hibernate.show_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 hibernate.show_sql=true
+
