--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -7,5 +7,5 @@ cas.service-registry.json.location=file:/etc/cas/services
 cas.server.name=https://echempad-cas.iciq.es:8443
 cas.server.prefix=https://echempad-cas.iciq.es:8443/cas
 
-server.ssl.key-store=file:etc/cas/CAS_keystore.p12
+server.ssl.key-store=file:etc/cas/CAS_KEYSTORE.p12
 
