--- a/gradle/tasks.gradle
+++ b/gradle/tasks.gradle
@@ -34,7 +34,7 @@ apply plugin: "de.undercouch.download"
 task run(group: "build", description: "Run the CAS web application in embedded container mode") {
     dependsOn 'build'
     doLast {
-        def casRunArgs = Arrays.asList("-server -noverify -Xmx2048M -XX:+TieredCompilation -XX:TieredStopAtLevel=1".split(" "))
+        def casRunArgs = Arrays.asList("-server -Xmx2048M -XX:+TieredCompilation -XX:TieredStopAtLevel=1".split(" "))
         project.javaexec {
             jvmArgs = casRunArgs
             classpath = project.files("build/libs/cas.war")
