--- a/etc/cas/config/db.properties
+++ b/etc/cas/config/db.properties
@@ -11,6 +11,7 @@ cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.PostgreSQLDialect
 # The database connection user.
 cas.authn.jdbc.query[0].user=eChempad
 
+cas.authn.jdbc.query[0].password=basureinventada
 # The database connection password.
 # password is a secret
 
