--- a/etc/cas/config/dev.properties
+++ b/etc/cas/config/dev.properties
@@ -1,18 +1,18 @@
 ## Logging
-# prod logger is the default logger
 logging.config=file:/etc/cas/config/log4j2-dev.xml
 logging.level.org.springframework=warn
-# Debug for ldap authentication, to know what classes are doing
 pac4j.log.level=debug
 org.apereo.cas.oidc="debug"
 org.apereo.cas.oidc.web.flow="debug"
-
-# Disables pooling, so we do not fail at start if the DNS of the ICIQ LDAP server is not resolvable
-cas.authn.ldap[0].disable-pooling=true
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
-
 hibernate.show_sql=true
+
+## Login and users
+# We set the cas.authn.accept.users to blank. This will deactivate the use of static user repositories by the CAS server.
+cas.authn.accept.enabled=casuser::Mellon
+
+# Disables pooling, so we do not fail at start if the DNS of the ICIQ LDAP server is not resolvable
+cas.authn.ldap[0].disable-pooling=true
 
