--- a/etc/cas/config/prod.properties
+++ b/etc/cas/config/prod.properties
@@ -1,7 +1,13 @@
 ## Logging
-# prod logger is the default logger
 logging.config=file:/etc/cas/config/log4j2.xml
-logging.level.org.springframework=INFO
+logging.level.org.springframework=warn
+pac4j.log.level=warn
+org.apereo.cas.oidc="warn"
+org.apereo.cas.oidc.web.flow="warn"
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
+logging.level.org.hibernate.type.descriptor.sql=warn
+hibernate.show_sql=false
 
 ## Login and users
 # We set the cas.authn.accept.users to blank. This will deactivate the use of static user repositories by the CAS server.
