CHANGED: increased logging level

--- a/etc/cas/config/prod.properties
+++ b/etc/cas/config/prod.properties
@@ -1,6 +1,6 @@
 ## Logging
-logging.config=file:/etc/cas/config/log4j2.xml
-logging.level.org.springframework=warn
+logging.config=file:/etc/cas/config/log4j2-dev.xml
+logging.level.org.springframework=debug
 pac4j.log.level=warn
 org.apereo.cas.oidc="warn"
 org.apereo.cas.oidc.web.flow="warn"
